# chat-app

./: .env  alembic.ini  common.py  main.py  pyproject.toml
alembic/versions/: 0d2e5aefa839_name_uniqued.py  cb50bf5344fb_.py
app/: connection.py  database.py  models.py  schemas.py
app/funcs/: chat_funcs.py  token.py
app/routers/: auth.py  chat.py
front/: index.js
